# Omulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .runsettings  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.rb  dockerbuild.sh  sonar-project.properties
.github/workflows/: ci.yml
cmake/: ConfigureTarget.cmake  DownloadedAssetManifest.cmake  FileManifest.cmake  OmulatorUtils.cmake  Overrides.cmake  SourceFileManifest.cmake  Toolchain-clang-cl-wsl.cmake  Toolchain-clang-cl.cmake  Toolchain-clang.cmake  Toolchain-gcc.cmake  Toolchain-msvc-wsl.cmake  Toolchain-msvc.cmake  ToolchainDefines.cmake  libimgui.cmake
design/: engine_design.md  mqdesign.md
docker/: Dockerfile  ubuntu.Dockerfile
include/omulator/: App.hpp  CPUIdentifier.hpp  Clock.hpp  Component.hpp  CoreGraphicsEngine.hpp  IClock.hpp  IGraphicsBackend.hpp  ILogger.hpp  IWindow.hpp  InputHandler.hpp  Interpreter.hpp  Latch.hpp  Logger.hpp  NullLogger.hpp  NullWindow.hpp  PrimitiveIO.hpp  PropertyMap.hpp  SpdlogLogger.hpp  Subsystem.hpp  System.hpp  SystemWindow.hpp  TestGraphicsEngine.hpp  VulkanBackend.hpp  Window.hpp  logger.hpp  main.hpp  oml_defines.hpp  oml_types.hpp  props.hpp
include/omulator/di/: Injector.hpp  TypeHash.hpp  TypeMap.hpp
include/omulator/graphics/: CoreGraphicsEngine.hpp
include/omulator/msg/: Mailbox.hpp  MailboxEndpoint.hpp  MailboxReceiver.hpp  MailboxRouter.hpp  MailboxSender.hpp  MailboxService.hpp  Message.hpp  MessageBuffer.hpp  MessageQueue.hpp  MessageQueueFactory.hpp  MessageType.hpp  Package.hpp
include/omulator/scheduler/: Scheduler.hpp  Worker.hpp  WorkerPool.hpp  jobs.hpp
include/omulator/ui/: IUIBackend.hpp  ImGuiBackend.hpp
include/omulator/util/: CLIInput.hpp  CLIParser.hpp  KillableThread.hpp  ObjectPool.hpp  Pimpl.hpp  RTMSpinlock.hpp  ResourceWrapper.hpp  SourceLocation.hpp  Spinlock.hpp  ThreadPool.hpp  TypeHash.hpp  TypeString.hpp  exception_handler.hpp  intrinsics.hpp  reinterpret.hpp  to_underlying.hpp
include/omulator/vkmisc/: Allocator.hpp  Frame.hpp  GPUBuffer.hpp  Initializer.hpp  Pipeline.hpp  Shader.hpp  SimpleMesh.hpp  Swapchain.hpp  VkBootstrapUtil.hpp  vkmisc.hpp
platform/sdl/: CMakeLists.txt  CPUIdentifier.cpp  KillableThread.cpp  PrimitiveIO.cpp  SystemWindow.cpp
platform/win32/: CMakeLists.txt  CPUIdentifier.cpp  KillableThread.cpp  PrimitiveIO.cpp  SystemWindow.cpp  Window.cpp  win32app.manifest  winmain.cpp
shaders/: red_triangle.vert  tri_mesh.frag  tri_mesh.vert  triangle.vert
src/: CMakeLists.txt  Clock.cpp  Component.cpp  CoreGraphicsEngine.cpp  InputHandler.cpp  Interpreter.cpp  Latch.cpp  Logger.cpp  NullWindow.cpp  SpdlogLogger.cpp  Subsystem.cpp  System.cpp  TestGraphicsEngine.cpp  VulkanBackend.cpp  logger.cpp  main.cpp
src/di/: Injector.cpp  injector_rules.cpp
src/graphics/: CoreGraphicsEngine.cpp  VertexSpec.hpp
src/msg/: Mailbox.cpp  MailboxEndpoint.cpp  MailboxReceiver.cpp  MailboxRouter.cpp  MailboxSender.cpp  MessageBuffer.cpp  MessageQueue.cpp  MessageQueueFactory.cpp  Package.cpp
src/platform/: CMakeLists.txt
src/platform/msvc/: CMakeLists.txt
src/platform/sdl/: CMakeLists.txt  CPUIdentifier.cpp  PrimitiveIO.cpp
src/platform/win32/: CMakeLists.txt  CPUIdentifier.cpp  PrimitiveIO.cpp  Window.cpp
src/scheduler/: CMakeLists.txt  Scheduler.cpp  Worker.cpp  WorkerPool.cpp
src/ui/: ImGuiBackend.cpp
src/util/: CLIInput.cpp  CLIParser.cpp  exception_handler.cpp
src/vkmisc/: Allocator.cpp  Frame.cpp  Initializer.cpp  Pipeline.cpp  Shader.cpp  SimpleMesh.cpp  Swapchain.cpp  VkBootstrapUtil.cpp  vkmisc.cpp
test/: CMakeLists.txt
test/include/mocks/: ClockMock.hpp  Dummy.hpp  LoggerMock.hpp  PrimitiveIOMock.hpp  exception_handler_mock.hpp
test/include/test/: Sequencer.hpp
test/unit/: CMakeLists.txt  Injector_test.cpp  Latch_test.cpp  MailboxEndpoint_test.cpp  MailboxRouter_test.cpp  Mailbox_test.cpp  MessageBuffer_test.cpp  MessageQueueFactory_test.cpp  MessageQueue_test.cpp  ObjectPool_test.cpp  Package_test.cpp  PropertyMap_test.cpp  ResourceWrapper_test.cpp  Scheduler_test.cpp  Spinlock_test.cpp  Subsystem_test.cpp  System_test.cpp  TypeHash_test.cpp  TypeMap_test.cpp  TypeString_test.cpp  WorkerPool_test.cpp  Worker_test.cpp  exception_handler_test.cpp  smoke_test.cpp
